# arh-plugin

./: .arh-plugin-export.json  .gitignore
.claude-plugin/: marketplace.json
arh-plugin/: .mcp.json  README.md
arh-plugin/.claude-plugin/: plugin.json
arh-plugin/hooks/: hooks.json
arh-plugin/mcp-server/: README.md  pyproject.toml
arh-plugin/mcp-server/client-src/: pyproject.toml
arh-plugin/mcp-server/client-src/arh_client/: __init__.py  _workspace.py  api.py  cli.py  config.py  git_tracker.py  hooks.py  llm_tracer.py  log_buffer.py  observer.py  research_manager.py  session.py  tracker.py
arh-plugin/mcp-server/client-src/arh_client/_bundled/: README.md  __init__.py  codex-hook-handler.py  harness_common.py  hook-handler.py
arh-plugin/mcp-server/client-src/tools/: sync_bundled.sh
arh-plugin/mcp-server/src/arh_mcp/: __init__.py  client.py  server.py
arh-plugin/mcp-server/src/arh_mcp/tools/: agents.py  communication.py  research.py  tracing.py  workflow.py
arh-plugin/mcp-server/tests/: conftest.py  test_agent_event_script.py  test_agents_tools.py  test_bundled_sync.py  test_codex_hook_handler.py  test_codex_hooks_cli.py  test_communication_tools.py  test_git_tracker.py  test_hook_handler.py  test_mcp_client_credentials.py  test_prune_shadow_refs.py  test_research_tools.py  test_setup_auto_tracking.py  test_setup_script_credentials.py  test_workflow_tools.py  test_workspace_initialization.py  test_workspace_template_sync.py
arh-plugin/scripts/: agent-event.py  agent-tracer.py  codex-hook-handler.py  harness_common.py  hook-handler.py  setup.py  (+1 more)
(+6 files in other folders)
