[project]
name = "arh-mcp"
version = "0.1.0"
description = "MCP Server for AI Researcher Hub"
requires-python = ">=3.12"
dependencies = [
    "arh-client",
    "fastmcp>=2.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
]

[tool.uv.sources]
arh-client = { path = "./client-src", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arh_mcp"]

[project.scripts]
arh-mcp = "arh_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-anyio>=0.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
