[project]
name = "arh-client"
version = "0.1.0"
description = "Python client library for AI Researcher Hub"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.1",
    "watchdog>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arh_client"]

[project.scripts]
arh = "arh_client.cli:main"
